sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:7: error: Unmatched closing brace '}' ignored here
        }
        ^AlgBubbleSort2:13: error: expected class or object definition
def bubbleSort()  {
^AlgBubbleSort2:28: error: Unmatched closing brace '}' ignored here
}
^