sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {

   for(i<-getValueCount()-2 to 0){
    for(j<-0 to i){
      bubbleSort()
      	}
    	}
  	}
	}
}

def bubbleSort()  {
  var echanges:Boolean=true;

  while(echanges==true){
    echanges=false
    for(i<-0 to getValueCount()-2){
    	if (isSmaller(i+1,i)){
        echanges=true
      	swap(i,i+1)
    	}
  	}
	}
}
